# trans-bot

./: .env.exa  .env.example  Dockerfile  README.md  bot.py  i18n.py  log.py  pyproject.toml  start.sh
config/: config.py
database/: db.py
database/tables/: base.py  chat.py
i18n/: en.yaml  ja.yaml  ru.yaml  zh-hans.yaml  zh-hant.yaml
methods/: __init__.py  chat_mgmt.py  trans.py
plugins/: group_trans.py  private_trans.py  start.py  trans.py
translator/: __init__.py  base.py  detecter.py  error.py  prompts.py  translator.py  utils.py
utils/: db.py  filters.py  optimized_event_loop.py  util.py
